<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailEventFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardContainer"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:layout_margin="8dp">
            <ImageView
                android:id="@+id/ivBanner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/imagebanner"
                android:scaleType="fitXY"
                tools:src="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_event"
            android:layout_marginTop="32dp"
            android:textSize="32sp"
            android:fontFamily="@font/fontpoppins"
            android:textFontWeight="600"/>

        <TextView
            android:id="@+id/tvClock"
            android:layout_marginTop="4dp"
            android:text="@string/Clock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">
            <TextView
                android:id="@+id/tvOwnerName"
                android:text="@string/owner_name"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvQuota"
                android:text="@string/quota"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp">
            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/description"
                android:fontFamily="@font/fontpoppins"
                     />
        </ScrollView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:text="@string/register_now"/>
        </LinearLayout>

    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>